Slider add and json server api call
json-server --watch db.json

--- a/src/app/page/home/sections/our-product/our-product.component.css
+++ b/src/app/page/home/sections/our-product/our-product.component.css
@@ -85,6 +85,11 @@ button.card_btns {
     margin-bottom: 50px;
 }
 
+.potato_card {
+    width: 90%;
+    margin: auto;
+}
+
 @media only screen and (max-width: 375px) and (min-width: 346px) {}
 
 @media only screen and (max-width: 544px) and (min-width: 375px) {}
