--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import 'ngx-owl-carousel-o/lib/styles/scss/owl.carousel';
+@import 'ngx-owl-carousel-o/lib/styles/scss/owl.theme.default';
 * {
     margin: 0px;
     padding: 0px;
@@ -78,4 +80,19 @@ element.style {
 
 .slick-list.draggable {
     padding-bottom: 30px !important;
+}
+
+.owl-item>div:after {
+    font-family: sans-serif;
+    font-size: 24px;
+    font-weight: bold;
+}
+
+.active.center>.slider_img>.inner_slider_img>img {
+    transform: scale(1);
+}
+
+.active>.slider_img>.inner_slider_img>img {
+    transform: scale(.8);
+    transition: .6s ease;
 }
